Add digit counter, clean up threading model, make scroll text smaller

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
 
 <resources>
     <string name="app_name">scroll.pi</string>
+    <string name="label_digits">digits</string>
+    <string name="field_digits_count_zero">0</string>
 </resources>
